<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/txtTematica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTematica"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="123dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:layout_width="214dp"
            android:layout_height="match_parent"
            android:src="@drawable/castillo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCastillo"
            android:layout_marginLeft="105dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="25dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="351dp"
        android:layout_height="123dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp">

        <ImageView
            android:layout_width="193dp"
            android:layout_height="match_parent"
            android:src="@drawable/cementerio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="97dp"
            android:gravity="center"
            android:text="@string/txtCementerio"
            android:textColor="@color/orange"
            android:textSize="25dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="350dp"
        android:layout_height="123dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        >

        <ImageView
            android:layout_width="216dp"
            android:layout_height="126dp"
            android:src="@drawable/pueblo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPueblo"
            android:layout_marginLeft="104dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="25dp"
            />
    </androidx.cardview.widget.CardView>
</FrameLayout>